--- a/index.html
+++ b/index.html
@@ -254,28 +254,35 @@
       </div>
     </section>
     <!-- About Me -->
-    <section
-      class="max-w-4xl mx-auto flex flex-col md:flex-row items-center gap-8"
-      data-aos="fade-up"
-      data-aos-delay="100"
-      id="about"
-    >
-      <div class="flex-1">
-        <h2 class="text-3xl font-bold mb-6 border-b-2 border-blue-600 inline-block pb-1">About Me</h2>
-        <p class="text-lg leading-relaxed max-w-3xl">
-          I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
-          <br /><br />
-          As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects involving data cleaning, model development, predictive analytics, and dashboard creation, including my flagship AI utility platform, SnapDocs AI.
-          <br /><br />
-          I thrive in dynamic environments and excel at communicating data stories that influence business outcomes. With a strong foundation in machine learning, statistical analysis, and data wrangling, I am committed to delivering high-impact results that create measurable value.
-          <br /><br />
-          Currently, I am actively seeking roles where I can contribute to solving real-world problems using data, collaborate with cross-functional teams, and grow within a forward-thinking organization.
-        </p>
-      </div>
-      <div class="flex-1 flex justify-center items-center">
-        <canvas id="aboutChartContainer" aria-label="Animated data chart" width="300" height="300"></canvas>
-      </div>
-    </section>
+   <!-- About Me -->
+<section
+  class="max-w-4xl mx-auto flex flex-col md:flex-row items-center gap-8"
+  data-aos="fade-up"
+  data-aos-delay="100"
+  id="about"
+>
+  <!-- Left: Text Content -->
+  <div class="flex-1">
+    <h2 class="text-3xl font-bold mb-6 border-b-2 border-blue-600 inline-block pb-1">About Me</h2>
+    <p class="text-lg leading-relaxed max-w-3xl">
+      I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
+      <br /><br />
+      As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects involving data cleaning, model development, predictive analytics, and dashboard creation, including my flagship AI utility platform, SnapDocs AI.
+      <br /><br />
+      I thrive in dynamic environments and excel at communicating data stories that influence business outcomes. With a strong foundation in machine learning, statistical analysis, and data wrangling, I am committed to delivering high-impact results that create measurable value.
+      <br /><br />
+      Currently, I am actively seeking roles where I can contribute to solving real-world problems using data, collaborate with cross-functional teams, and grow within a forward-thinking organization.
+    </p>
+  </div>
+
+  <!-- Right: Profile Image -->
+  <div class="flex-1 flex justify-center items-center">
+    <div class="w-48 h-48 rounded-full overflow-hidden shadow-lg border-4 border-blue-500">
+      <img src="azad.jpg" alt="Azad Bhasme" class="w-full h-full object-cover" />
+    </div>
+  </div>
+</section>
+
     <!-- Skills -->
     <section class="max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="150" id="skills">
       <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Skills</h2>
