--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     rel="stylesheet"
   />
   <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
   <style>
     body {
       font-family: "Roboto", sans-serif;
@@ -254,17 +255,20 @@
       </div>
     </section>
     <!-- About Me -->
-   <!-- About Me -->
+
+<!-- About Me -->
 <section
-  class="max-w-4xl mx-auto flex flex-col md:flex-row items-center gap-8"
+  class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-10 py-12 px-4"
   data-aos="fade-up"
   data-aos-delay="100"
   id="about"
 >
-  <!-- Left: Text Content -->
+  <!-- Text Section -->
   <div class="flex-1">
-    <h2 class="text-3xl font-bold mb-6 border-b-2 border-blue-600 inline-block pb-1">About Me</h2>
-    <p class="text-lg leading-relaxed max-w-3xl">
+    <h2 class="text-3xl font-bold mb-6 border-b-2 border-blue-600 inline-block pb-1">
+      About Me
+    </h2>
+    <p class="text-lg leading-relaxed max-w-3xl text-gray-200">
       I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
       <br /><br />
       As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects involving data cleaning, model development, predictive analytics, and dashboard creation, including my flagship AI utility platform, SnapDocs AI.
@@ -275,13 +279,17 @@
     </p>
   </div>
 
-  <!-- Right: Profile Image -->
-  <div class="flex-1 flex justify-center items-center">
-    <div class="w-48 h-48 rounded-full overflow-hidden shadow-lg border-4 border-blue-500">
+  <!-- Image and Name Section -->
+  <div class="flex-1 flex flex-col justify-center items-center">
+    <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-blue-500 shadow-2xl">
       <img src="azad.jpg" alt="Azad Bhasme" class="w-full h-full object-cover" />
     </div>
+    <h2 class="text-3xl mt-4 font-bold text-white" style="font-family: 'Pacifico', cursive; text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;">
+      Azad Bhasme
+    </h2>
   </div>
 </section>
+
 
     <!-- Skills -->
     <section class="max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="150" id="skills">
