--- a/index.html
+++ b/index.html
@@ -255,20 +255,32 @@
       </div>
     </section>
     <!-- About Me -->
-
 <!-- About Me -->
 <section
-  class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-10 py-12 px-4"
+  class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-10 p-6"
   data-aos="fade-up"
   data-aos-delay="100"
   id="about"
 >
-  <!-- Text Section -->
+  <!-- ✅ Profile Image -->
+  <div class="flex-1 flex justify-center items-center">
+    <img
+      src="azad.jpg"
+      alt="Azad Bhasme"
+      class="w-72 h-72 rounded-full border-4 border-cyan-400 shadow-lg object-cover hover:scale-105 transition-transform duration-300"
+      style="box-shadow: 0 0 25px rgba(0, 255, 255, 0.6);"
+    />
+  </div>
+
+  <!-- ✅ About Text -->
   <div class="flex-1">
-    <h2 class="text-3xl font-bold mb-6 border-b-2 border-blue-600 inline-block pb-1">
-      About Me
+    <h2
+      class="text-4xl font-bold text-white mb-4"
+      style="font-family: 'Times New Roman', serif; text-shadow: 0 0 10px #00ffff;"
+    >
+      Azad Bhasme
     </h2>
-    <p class="text-lg leading-relaxed max-w-3xl text-gray-200">
+    <p class="text-lg leading-relaxed max-w-3xl">
       I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
       <br /><br />
       As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects involving data cleaning, model development, predictive analytics, and dashboard creation, including my flagship AI utility platform, SnapDocs AI.
@@ -278,18 +290,7 @@
       Currently, I am actively seeking roles where I can contribute to solving real-world problems using data, collaborate with cross-functional teams, and grow within a forward-thinking organization.
     </p>
   </div>
-
-  <!-- Image and Name Section -->
-  <div class="flex-1 flex flex-col justify-center items-center">
-    <div class="w-64 h-64 rounded-full overflow-hidden border-4 border-blue-500 shadow-2xl">
-      <img src="azad.jpg" alt="Azad Bhasme" class="w-full h-full object-cover" />
-    </div>
-    <h2 class="text-3xl mt-4 font-bold text-white" style="font-family: 'Pacifico', cursive; text-shadow: 0 0 10px #00ffff, 0 0 20px #00ffff;">
-      Azad Bhasme
-    </h2>
-  </div>
 </section>
-
 
 
     <!-- Skills -->
