--- a/index.html
+++ b/index.html
@@ -255,43 +255,31 @@
       </div>
     </section>
     <!-- About Me -->
-<!-- About Me -->
-<section
-  class="max-w-6xl mx-auto flex flex-col md:flex-row items-center gap-10 p-6"
-  data-aos="fade-up"
-  data-aos-delay="100"
-  id="about"
->
-  <!-- ✅ Profile Image -->
-  <div class="flex-1 flex justify-center items-center">
+<section id="about" class="py-20 bg-black text-white">
+  <div class="flex flex-col items-center text-center px-4">
+    <!-- Profile Image Centered -->
     <img
       src="azad.jpg"
       alt="Azad Bhasme"
-      class="w-72 h-72 rounded-full border-4 border-cyan-400 shadow-lg object-cover hover:scale-105 transition-transform duration-300"
-      style="box-shadow: 0 0 25px rgba(0, 255, 255, 0.6);"
+      class="rounded-full border-4 border-cyan-400 shadow-xl w-48 h-48 object-cover mb-4 animate-pulse"
+      style="box-shadow: 0 0 25px #00ffff;"
     />
-  </div>
 
-  <!-- ✅ About Text -->
-  <div class="flex-1">
-    <h2
-      class="text-4xl font-bold text-white mb-4"
-      style="font-family: 'Times New Roman', serif; text-shadow: 0 0 10px #00ffff;"
-    >
+    <!-- Name below Image -->
+    <h2 class="text-4xl font-semibold mb-4" style="font-family: 'Times New Roman', serif; text-shadow: 0 0 10px #00ffff;">
       Azad Bhasme
     </h2>
-    <p class="text-lg leading-relaxed max-w-3xl">
+
+    <!-- Short Description -->
+    <p class="max-w-3xl text-lg text-gray-300 leading-relaxed">
       I am a passionate and results-driven Data Science Intern with hands-on experience transforming raw data into actionable insights that drive strategic decision-making. Proficient in industry-standard tools like Python, SQL, Excel, R Programming, and Power BI, I specialize in uncovering patterns, identifying trends, and visualizing complex datasets with clarity and precision.
-      <br /><br />
-      As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects involving data cleaning, model development, predictive analytics, and dashboard creation, including my flagship AI utility platform, SnapDocs AI.
-      <br /><br />
-      I thrive in dynamic environments and excel at communicating data stories that influence business outcomes. With a strong foundation in machine learning, statistical analysis, and data wrangling, I am committed to delivering high-impact results that create measurable value.
-      <br /><br />
-      Currently, I am actively seeking roles where I can contribute to solving real-world problems using data, collaborate with cross-functional teams, and grow within a forward-thinking organization.
+    </p>
+
+    <p class="max-w-3xl text-lg text-gray-300 leading-relaxed mt-4">
+      As a member of the Google Developer Program, I stay at the forefront of technological advancements and continuously sharpen my skills through real-world projects and community contributions. I’ve successfully led and contributed to projects that showcase my commitment to innovation and excellence in the field of data science.
     </p>
   </div>
 </section>
-
 
     <!-- Skills -->
     <section class="max-w-5xl mx-auto" data-aos="fade-up" data-aos-delay="150" id="skills">
