--- a/index.html
+++ b/index.html
@@ -420,14 +420,15 @@
               <span>📄</span><span>🤖</span><span>🛂</span>
             </div>
             <lottie-player
-              src="https://assets2.lottiefiles.com/packages/lf20_Cq1lb4.json"
-              background="transparent"
-              speed="1"
-              style="width: 300px; height: 300px;"
-              loop
-              autoplay
-              aria-label="Machine learning model training animation"
-            ></lottie-player>
+  src="https://assets6.lottiefiles.com/packages/lf20_u4yrau.json"
+  background="transparent"
+  speed="1"
+  style="width: 300px; height: 300px;"
+  loop
+  autoplay
+  aria-label="AI animation"
+></lottie-player>
+
           </div>
           <p class="text-blue-600 font-semibold text-center mt-2 mb-4">
             Image to PDF conversion, commenting, tagging, and format conversion made easy with AI-powered document management.
@@ -613,14 +614,15 @@
           </svg>
           <div class="flex justify-center mt-6">
             <lottie-player
-              src="https://assets7.lottiefiles.com/packages/lf20_oGlWy5.json"
-              background="transparent"
-              speed="1"
-              style="width: 150px; height: 150px;"
-              loop
-              autoplay
-              aria-label="Waving robot animation"
-            ></lottie-player>
+              src="https://assets9.lottiefiles.com/packages/lf20_2LdLki.json"
+               background="transparent"
+               speed="1"
+               style="width: 150px; height: 150px;"
+               loop
+               autoplay
+               aria-label="Waving robot animation"
+             ></lottie-player>   
+  
           </div>
           <p class="mt-4 text-center text-sm text-gray-600 dark:text-gray-400">
             Or email me directly at
