--- a/index.html
+++ b/index.html
@@ -404,6 +404,83 @@
           </div>
           <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
         </div>
+        <!-- APIs & Web Scraping -->
+<div
+  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
+  title="APIs & Web Scraping - Intermediate"
+>
+  <img
+    alt="APIs & Web Scraping icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://cdn-icons-png.flaticon.com/512/1006/1006542.png"
+    width="64"
+  />
+  <h3 class="font-semibold text-lg text-center">APIs & Web Scraping</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 70%; background-color:#1E88E5;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+<!-- Matplotlib -->
+<div
+  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
+  title="Matplotlib - Intermediate"
+>
+  <img
+    alt="Matplotlib icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://matplotlib.org/stable/_static/logo2_compressed.svg"
+    width="64"
+    onerror="this.onerror=null;this.src='https://cdn-icons-png.flaticon.com/512/1006/1006559.png';"
+  />
+  <h3 class="font-semibold text-lg">Matplotlib</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 70%; background-color:#11557C;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+<!-- Machine Learning -->
+<div
+  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
+  title="Machine Learning - Intermediate"
+>
+  <img
+    alt="Machine Learning icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://cdn-icons-png.flaticon.com/512/10257/10257314.png"
+    width="64"
+  />
+  <h3 class="font-semibold text-lg text-center">Machine Learning</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 70%; background-color:#00897B;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Intermediate</span>
+</div>
+
+<!-- Deep Learning -->
+<div
+  class="card p-6 rounded-lg flex flex-col items-center space-y-4 hover:shadow-xl transition cursor-default"
+  title="Deep Learning - Beginner"
+>
+  <img
+    alt="Deep Learning icon"
+    class="w-16 h-16"
+    height="64"
+    src="https://cdn-icons-png.flaticon.com/512/7861/7861236.png"
+    width="64"
+  />
+  <h3 class="font-semibold text-lg">Deep Learning</h3>
+  <div class="w-full skill-bar">
+    <div style="width: 50%; background-color:#6A1B9A;"></div>
+  </div>
+  <span class="text-sm text-gray-600 dark:text-gray-400">Beginner</span>
+</div>
+
       </div>
     </section>
     <!-- Projects -->
@@ -415,19 +492,21 @@
           class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer"
           title="SnapDocs AI App"
         >
+
           <div class="flex flex-col md:flex-row items-center gap-4">
-            <div class="snapdocs-emoji" aria-label="Document, robot and security icons in blue color" style="font-size: 3.5rem; color: #2563eb;">
-              <span>📄</span><span>🤖</span><span>🛂</span>
-            </div>
-            <lottie-player
-  src="https://assets6.lottiefiles.com/packages/lf20_u4yrau.json"
-  background="transparent"
-  speed="1"
-  style="width: 300px; height: 300px;"
-  loop
-  autoplay
-  aria-label="AI animation"
-></lottie-player>
+  <!-- Replace icons with new animation -->
+  <lottie-player
+    src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
+    background="transparent"
+    speed="1"
+    style="width: 300px; height: 300px;"
+    loop
+    autoplay
+    aria-label="AI document assistant animation"
+  ></lottie-player>
+</div>
+
+  
 
           </div>
           <p class="text-blue-600 font-semibold text-center mt-2 mb-4">
