--- a/index.html
+++ b/index.html
@@ -506,9 +506,7 @@
   ></lottie-player>
 </div>
 
-  
-
-          </div>
+         </div>
           <p class="text-blue-600 font-semibold text-center mt-2 mb-4">
             Image to PDF conversion, commenting, tagging, and format conversion made easy with AI-powered document management.
           </p>
@@ -589,7 +587,57 @@
             >
           </div>
         </div>
-      </div>
+      <!-- FireWatch-AI Project -->
+<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
+  <h3 class="text-xl font-semibold text-blue-600 mb-2">🔥 FireWatch AI</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+    A real-time fire detection system powered by YOLOv8. Detects and marks fire in live webcam or video feeds using computer vision.
+  </p>
+  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
+    <li>Real-time detection via webcam/video</li>
+    <li>Highlights fire with bounding boxes</li>
+    <li>Outputs annotated video/image</li>
+  </ul>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
+  <div class="flex gap-4">
+    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 Live App</a>
+  </div>
+</div>
+
+<!-- CineSuggest Project -->
+<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
+  <h3 class="text-xl font-semibold text-blue-600 mb-2">🎬 CineSuggest</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+    A content-based movie recommendation system that analyzes metadata and suggests similar movies with posters from TMDb.
+  </p>
+  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
+    <li>Recommends 5 similar movies</li>
+    <li>Dark theme with modern UI</li>
+    <li>Google Drive integration for large files</li>
+  </ul>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Pandas, TMDb API, Scikit-learn</p>
+  <div class="flex gap-4">
+    <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 Live App</a>
+  </div>
+</div>
+
+<!-- Relativistic Calculator Project -->
+<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
+  <h3 class="text-xl font-semibold text-blue-600 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
+  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
+    A Python tool to calculate relativistic mass and time dilation based on Einstein’s special relativity theory. Ideal for science and space learners.
+  </p>
+  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
+    <li>Mass increases at high velocity</li>
+    <li>Time slows down near light speed</li>
+  </ul>
+  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Special Relativity, Physics</p>
+  <div class="flex gap-4">
+    <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+  </div>
+</div>
+
+   </div>
     </section>
     <!-- GitHub & Kaggle Projects -->
     <section class="max-w-4xl mx-auto" data-aos="fade-up" data-aos-delay="250" id="integrations">
