--- a/index.html
+++ b/index.html
@@ -486,155 +486,128 @@
     <!-- Projects -->
     <section class="max-w-6xl mx-auto" data-aos="fade-up" data-aos-delay="200" id="projects">
       <h2 class="text-3xl font-bold mb-8 border-b-2 border-blue-600 inline-block pb-1">Projects</h2>
-      <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
-        <!-- Featured Project -->
-        <div
-          class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer"
-          title="SnapDocs AI App"
-        >
+     <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
 
-          <div class="flex flex-col md:flex-row items-center gap-4">
-  <!-- Replace icons with new animation -->
-  <lottie-player
-    src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
-    background="transparent"
-    speed="1"
-    style="width: 300px; height: 300px;"
-    loop
-    autoplay
-    aria-label="AI document assistant animation"
-  ></lottie-player>
-</div>
-
-         </div>
-          <p class="text-blue-600 font-semibold text-center mt-2 mb-4">
-            Image to PDF conversion, commenting, tagging, and format conversion made easy with AI-powered document management.
-          </p>
-          <h3 class="text-xl font-semibold mt-4 mb-2">SnapDocs AI App</h3>
-          <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-            Powerful AI utility platform for document management.
-          </p>
-          <p class="mb-3 text-sm font-semibold text-blue-600 dark:text-blue-400">
-            Technologies: Flask, TailwindCSS, Python
-          </p>
-          <div class="flex space-x-4">
-            <a
-              class="text-blue-600 hover:underline flex items-center space-x-2"
-              href="https://github.com/Azad-Bhasme/SnapDocsAI.git"
-              rel="noopener"
-              target="_blank"
-              ><i class="fab fa-github fa-lg"></i><span>GitHub</span></a
-            >
-            <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://snapdocs-ai.onrender.com" target="_blank" rel="noopener"><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a>
-          </div>
-        </div>
-        <!-- Project 2 -->
-        <div
-          class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer"
-          title="Project 2"
-        >
-          <img
-            alt="Screenshot of Project 2 dashboard with charts and data visualizations"
-            class="rounded-md mb-4 object-cover w-full h-48"
-            height="400"
-            src="https://storage.googleapis.com/a1aa/image/c5203d68-e585-400c-58b7-9d5deb37ceca.jpg"
-            width="600"
-          />
-          <h3 class="text-xl font-semibold mb-2">Project 2</h3>
-          <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-            A data visualization dashboard built with Python and Tableau to analyze sales trends.
-          </p>
-          <p class="mb-3 text-sm font-semibold text-blue-600 dark:text-blue-400">Technologies: Python, Tableau</p>
-          <div class="flex space-x-4">
-            <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme" target="_blank" rel="noopener">
-              <i class="fab fa-github fa-lg"></i><span>GitHub</span>
-            </a>
-          </div>
-        </div>
-        <!-- Project 3 -->
-        <div
-          class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer"
-          title="Cancer Prediction Web App"
-        >
-          <img
-            alt="Screenshot of Project 3 machine learning model results"
-            class="rounded-md mb-4 object-cover w-full h-48"
-            height="400"
-            src="https://storage.googleapis.com/a1aa/image/4cfbd682-9de4-46af-f99c-50b9ab2133ea.jpg"
-            width="600"
-          />
-          <h3 class="text-xl font-semibold mb-2">🚀 Cancer Prediction Web App</h3>
-          <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
-            Built an interactive cancer prediction tool using a Random Forest Classifier and Streamlit. The app enables real-time classification of tumors as benign or malignant based on patient data such as age, tumor size, stage, and treatment history. Enhanced predictive accuracy and provided an intuitive, responsive user interface for quick decision-making support.
-          </p>
-          <p class="mb-3 text-sm font-semibold text-blue-600 dark:text-blue-400">
-            Technologies: Python, Streamlit, Machine Learning
-          </p>
-          <div class="flex space-x-4">
-            <a
-              class="text-blue-600 hover:underline flex items-center space-x-2"
-              href="https://github.com/Azad-Bhasme/Cancer-predicition-.git"
-              rel="noopener"
-              target="_blank"
-              ><i class="fab fa-github fa-lg"></i><span>GitHub</span></a
-            >
-            <a
-              class="text-blue-600 hover:underline flex items-center space-x-2"
-              href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/"
-              rel="noopener"
-              target="_blank"
-              ><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a
-            >
-          </div>
-        </div>
-      <!-- FireWatch-AI Project -->
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
-  <h3 class="text-xl font-semibold text-blue-600 mb-2">🔥 FireWatch AI</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A real-time fire detection system powered by YOLOv8. Detects and marks fire in live webcam or video feeds using computer vision.
-  </p>
-  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
-    <li>Real-time detection via webcam/video</li>
-    <li>Highlights fire with bounding boxes</li>
-    <li>Outputs annotated video/image</li>
-  </ul>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, YOLOv8, OpenCV, Streamlit</p>
-  <div class="flex gap-4">
-    <a href="https://firewatch-ai-byazad.streamlit.app" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 Live App</a>
+  <!-- SnapDocs AI -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="SnapDocs AI App">
+    <lottie-player
+      src="https://assets10.lottiefiles.com/packages/lf20_x62chJ.json"
+      background="transparent"
+      speed="1"
+      style="width: 100%; height: 200px;"
+      loop autoplay aria-label="AI document assistant animation"
+    ></lottie-player>
+    <h3 class="text-xl font-semibold mt-4 mb-2">📄 SnapDocs AI App</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      AI utility platform for document conversion, tagging, and PDF management.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Flask, TailwindCSS, Python
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/SnapDocsAI.git" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://snapdocs-ai.onrender.com" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a>
+    </div>
   </div>
-</div>
 
-<!-- CineSuggest Project -->
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
-  <h3 class="text-xl font-semibold text-blue-600 mb-2">🎬 CineSuggest</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A content-based movie recommendation system that analyzes metadata and suggests similar movies with posters from TMDb.
-  </p>
-  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
-    <li>Recommends 5 similar movies</li>
-    <li>Dark theme with modern UI</li>
-    <li>Google Drive integration for large files</li>
-  </ul>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Streamlit, Pandas, TMDb API, Scikit-learn</p>
-  <div class="flex gap-4">
-    <a href="https://cinesuggest-byazad.streamlit.app/" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 Live App</a>
+  <!-- FireWatch-AI -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="FireWatch AI">
+    <lottie-player
+      src="https://assets10.lottiefiles.com/packages/lf20_w5YVhD.json"
+      background="transparent"
+      speed="1"
+      style="width: 100%; height: 200px;"
+      loop autoplay aria-label="Fire detection animation"
+    ></lottie-player>
+    <h3 class="text-xl font-semibold mt-4 mb-2">🔥 FireWatch AI</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      Real-time fire detection system powered by YOLOv8 using webcam/video input.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Python, YOLOv8, OpenCV, Streamlit
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://firewatch-ai-byazad.streamlit.app" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Live App</span></a>
+    </div>
   </div>
-</div>
 
-<!-- Relativistic Calculator Project -->
-<div class="bg-white dark:bg-gray-800 rounded-lg shadow-md p-6 transition hover:shadow-xl">
-  <h3 class="text-xl font-semibold text-blue-600 mb-2">🌌 Relativistic Mass & Time Dilation Calculator</h3>
-  <p class="text-gray-700 dark:text-gray-300 text-sm mb-3">
-    A Python tool to calculate relativistic mass and time dilation based on Einstein’s special relativity theory. Ideal for science and space learners.
-  </p>
-  <ul class="text-sm text-gray-600 dark:text-gray-400 mb-2 list-disc list-inside">
-    <li>Mass increases at high velocity</li>
-    <li>Time slows down near light speed</li>
-  </ul>
-  <p class="text-sm text-gray-600 dark:text-gray-400 italic mb-2">Tech: Python, Special Relativity, Physics</p>
-  <div class="flex gap-4">
-    <a href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank" class="text-blue-600 hover:underline font-medium">🔗 GitHub</a>
+  <!-- CineSuggest -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="CineSuggest Movie Recommender">
+    <img
+      alt="Movie recommendation preview"
+      class="rounded-md mb-4 object-cover w-full h-48"
+      src="https://cdn-icons-png.flaticon.com/512/744/744922.png"
+    />
+    <h3 class="text-xl font-semibold mb-2">🎬 CineSuggest</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      A movie recommendation system using metadata and poster visuals from TMDb.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Python, Streamlit, Pandas, TMDb API
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://cinesuggest-byazad.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Live App</span></a>
+    </div>
   </div>
+
+  <!-- Relativistic Calculator -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Relativistic Physics Calculator">
+    <img
+      alt="Space physics visualization"
+      class="rounded-md mb-4 object-cover w-full h-48"
+      src="https://cdn-icons-png.flaticon.com/512/5402/5402110.png"
+    />
+    <h3 class="text-xl font-semibold mb-2">🌌 Relativistic Mass & Time Dilation</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      Calculates relativistic mass and time perception using Einstein's special relativity.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Python, Physics, NumPy
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/Relativistic-Mass-and-Time-Dilation-Calculator" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
+    </div>
+  </div>
+
+  <!-- Cancer Prediction App -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Cancer Prediction App">
+    <img
+      alt="ML prediction results"
+      class="rounded-md mb-4 object-cover w-full h-48"
+      src="https://cdn-icons-png.flaticon.com/512/2966/2966484.png"
+    />
+    <h3 class="text-xl font-semibold mb-2">🚀 Cancer Prediction Web App</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      Classifies tumors as benign or malignant using Random Forest and Streamlit.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Python, Streamlit, Machine Learning
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme/Cancer-predicition-.git" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://endapp-amnzb4ctw4mp66mkjzctkr.streamlit.app/" target="_blank"><i class="fas fa-external-link-alt fa-sm"></i><span>Demo</span></a>
+    </div>
+  </div>
+
+  <!-- Project 2 (Tableau Dashboard) -->
+  <div class="card rounded-lg p-6 flex flex-col shadow-lg hover:shadow-2xl transition cursor-pointer" title="Sales Dashboard">
+    <img
+      alt="Data dashboard screenshot"
+      class="rounded-md mb-4 object-cover w-full h-48"
+      src="https://cdn-icons-png.flaticon.com/512/5658/5658077.png"
+    />
+    <h3 class="text-xl font-semibold mb-2">📊 Sales Dashboard</h3>
+    <p class="text-gray-700 dark:text-gray-300 mb-3 flex-grow">
+      A dashboard built with Tableau to visualize and analyze sales trends.
+    </p>
+    <p class="text-sm font-semibold text-blue-600 dark:text-blue-400 mb-3">
+      Technologies: Python, Tableau
+    </p>
+    <div class="flex space-x-4">
+      <a class="text-blue-600 hover:underline flex items-center space-x-2" href="https://github.com/Azad-Bhasme" target="_blank"><i class="fab fa-github fa-lg"></i><span>GitHub</span></a>
+    </div>
+  </div>
+
 </div>
 
    </div>
